<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myapplication.MainActivity">

    <ImageView
        android:id="@+id/me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/me"
        android:alpha="0.2"
        android:scaleType="fitXY"
        android:contentDescription="@string/name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/me"
        app:civ_border_width="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/action_image"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/action_image"
        android:id="@+id/name"
        android:layout_marginTop="16dp"/>


    <TextView
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_below="@id/name"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/bio"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_officialanoti"
        android:textAlignment="center"
        android:layout_below="@id/bio"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@android:color/darker_gray"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slack_officialanoti"
        android:textAlignment="center"
        android:layout_below="@id/bio"
        android:textColor="@android:color/black"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="mail"/>

</RelativeLayout>
